[gd_scene load_steps=3 format=3 uid="uid://window_base"]

[ext_resource type="Script" path="res://scripts/Window.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_titlebar"]
bg_color = Color(0.15, 0.15, 0.2, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.1, 0.1, 0.14, 1)
border_color = Color(0.3, 0.3, 0.4, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_left = 6
corner_radius_bottom_right = 6

[node name="Window" type="Panel"]
script = ExtResource("1")
custom_minimum_size = Vector2(400, 300)
size = Vector2(500, 400)
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")
mouse_filter = 0

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TitleBar" type="HBoxContainer" parent="VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 32)
theme_override_styles/panel = SubResource("StyleBoxFlat_titlebar")

[node name="TitleLabel" type="Label" parent="VBox/TitleBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Window"
theme_override_colors/font_color = Color(0.9, 0.9, 0.95, 1)
theme_override_font_sizes/font_size = 13
vertical_alignment = 1

[node name="MinimizeButton" type="Button" parent="VBox/TitleBar"]
layout_mode = 2
custom_minimum_size = Vector2(28, 28)
text = "─"
flat = true
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)

[node name="CloseButton" type="Button" parent="VBox/TitleBar"]
layout_mode = 2
custom_minimum_size = Vector2(28, 28)
text = "✕"
flat = true
theme_override_colors/font_color = Color(1, 0.4, 0.4, 1)

[node name="Content" type="MarginContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
size_flags_horizontal = 3
theme_override_constants/margin_left = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_bottom = 6
